--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200');
 body {
   font-family: 'Raleway', sans-serif;
-  background:#eee;
+  background:#fffff;
 }
 
 .wrapper {
